<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">FHTW-Drohne</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_btsearching">Find Device</string>
    <string name="title_activity_device_list">Device List</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan for Devices</string>

    <!-- MainActivity -->
    <string name="title_arm">ARM</string>
    <string name="title_hold">HOLD</string>

    <!-- BluetoothControl -->
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving program.</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_activity_settings">Settings</string>

    <!-- SettingsActivity -->
    <string name="title_sensitivity">INPUT SENSITIVITY:</string>
    <string name="title_throttle_sens">Throttle</string>
    <string name="title_steer_sens">Steering</string>
    <string name="sens_start">1.0</string>
    <string name="title_cal">STEERING CALIBRATION:</string>
    <string name="title_roll_call">Roll</string>
    <string name="title_pitch_call">Pitch</string>
    <string name="title_yaw_call">Yaw</string>
    <string name="cal_start">0</string>

</resources>
