<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context="at.technikum_wien.fhtw_drohne.SettingsActivity">

<TextView
    android:id="@+id/title_sensitivity"
    android:text="@string/title_sensitivity"
    android:paddingBottom="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
<TextView
    android:id="@+id/title_throttle_sens"
    android:layout_below="@id/title_sensitivity"
    android:text="@string/title_throttle_sens"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
<SeekBar
    android:id="@+id/seek_throttle_sens"
    android:layout_below="@id/title_throttle_sens"
    android:max="1000"
    android:progress="@integer/sens_start"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
<TextView
    android:id="@+id/txt_throttle_sens"
    android:layout_above="@id/seek_throttle_sens"
    android:layout_alignParentRight="true"
    android:text="@string/sens_start"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
<TextView
    android:id="@+id/title_steer_sens"
    android:layout_below="@id/seek_throttle_sens"
    android:text="@string/title_steer_sens"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
<SeekBar
    android:id="@+id/seek_steer_sens"
    android:layout_below="@id/title_steer_sens"
    android:max="1000"
    android:progress="@integer/sens_start"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
<TextView
    android:id="@+id/txt_steer_sens"
    android:layout_above="@id/seek_steer_sens"
    android:layout_alignParentRight="true"
    android:text="@string/sens_start"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<TextView
    android:id="@+id/txt_calibration"
    android:layout_below="@id/seek_steer_sens"
    android:text="@string/title_cal"
    android:paddingTop="25dp"
    android:paddingBottom="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
<TextView
    android:id="@+id/title_roll"
    android:layout_below="@id/txt_calibration"
    android:text="@string/title_roll_call"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
<SeekBar
    android:id="@+id/seek_roll"
    android:layout_below="@id/title_roll"
    android:max="1000"
    android:progress="@integer/cal_start"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
<TextView
    android:id="@+id/txt_roll"
    android:layout_above="@id/seek_roll"
    android:layout_alignParentRight="true"
    android:text="@string/cal_start"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<TextView
    android:id="@+id/title_pitch"
    android:layout_below="@id/seek_roll"
    android:text="@string/title_pitch_call"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
<SeekBar
    android:id="@+id/seek_pitch"
    android:layout_below="@id/title_pitch"
    android:max="1000"
    android:progress="@integer/cal_start"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
<TextView
    android:id="@+id/txt_pitch"
    android:layout_above="@id/seek_pitch"
    android:layout_alignParentRight="true"
    android:text="@string/cal_start"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<TextView
    android:id="@+id/title_yaw"
    android:layout_below="@id/seek_pitch"
    android:text="@string/title_yaw_call"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
<SeekBar
    android:id="@+id/seek_yaw"
    android:layout_below="@id/title_yaw"
    android:max="1000"
    android:progress="@integer/cal_start"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
<TextView
    android:id="@+id/txt_yaw"
    android:layout_above="@id/seek_yaw"
    android:layout_alignParentRight="true"
    android:text="@string/cal_start"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

</RelativeLayout>
